upgrading component, so it's possible to use stackgres versions greater than 1.5.0

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/init-service-account.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/init-service-account.yaml
@@ -2,25 +2,111 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook: pre-install,pre-upgrade
     helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
     helm.sh/hook-weight: '-100'
   name: stackgres-operator-init
   namespace: syn-stackgres-operator
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
+    helm.sh/hook-weight: '-100'
+  name: stackgres-operator-init
+rules:
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+      - clusterrolebinding
+    verbs:
+      - create
+  - apiGroups:
+      - apiextensions.k8s.io
+    resourceNames:
+      - sgconfigs.stackgres.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - get
+  - apiGroups:
+      - apiextensions.k8s.io
+    resourceNames:
+      - sgconfigs.stackgres.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - get
+  - apiGroups:
+      - rbac.authorization.k8s.io
+    resourceNames:
+      - stackgres-restapi-admin
+    resources:
+      - clusterrolebindings
+    verbs:
+      - get
+      - delete
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   annotations:
-    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
+    helm.sh/hook-weight: '-100'
+  name: stackgres-operator-init
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: stackgres-operator-init
+subjects:
+  - kind: ServiceAccount
+    name: stackgres-operator-init
+    namespace: syn-stackgres-operator
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
+    helm.sh/hook-weight: '-100'
+  name: stackgres-operator-init
+  namespace: syn-stackgres-operator
+rules:
+  - apiGroups:
+      - stackgres.io
+    resources:
+      - sgconfigs
+    verbs:
+      - create
+  - apiGroups:
+      - stackgres.io
+    resourceNames:
+      - stackgres-operator
+    resources:
+      - sgconfigs
+    verbs:
+      - get
+      - update
+      - patch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
     helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
     helm.sh/hook-weight: '-100'
   name: stackgres-operator-init
   namespace: syn-stackgres-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  kind: Role
+  name: stackgres-operator-init
 subjects:
   - kind: ServiceAccount
     name: stackgres-operator-init
