--- a/tests/golden/defaults/stackgres-operator/apps/stackgres-operator.yaml
+++ b/tests/golden/defaults/stackgres-operator/apps/stackgres-operator.yaml
@@ -12,6 +12,15 @@ spec:
       jqPathExpression:
         - .webhooks[]?.clientConfig.caBundle
       kind: MutatingWebhookConfiguration
+    - group: cert-manager.io/v1
+      jsonPointers:
+        - /spec/duration
+        - /spec/renewBefore
+      kind: Certificate
+    - group: apiextensions.k8s.io/v1
+      jqPathExpression:
+        - .. | select(.nullable?)
+      kind: CustomResourceDefinition
   syncPolicy:
     syncOptions:
       - ServerSideApply=true
