--- a/tests/golden/defaults/stackgres-operator/apps/stackgres-operator.yaml
+++ b/tests/golden/defaults/stackgres-operator/apps/stackgres-operator.yaml
@@ -12,12 +12,12 @@ spec:
       jqPathExpression:
         - .webhooks[]?.clientConfig.caBundle
       kind: MutatingWebhookConfiguration
-    - group: cert-manager.io/v1
+    - group: cert-manager.io
       jsonPointers:
         - /spec/duration
         - /spec/renewBefore
       kind: Certificate
-    - group: apiextensions.k8s.io/v1
+    - group: apiextensions.k8s.io
       jqPathExpression:
         - .. | select(.nullable?)
       kind: CustomResourceDefinition
