fixing role rule in Role

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_role.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_role.yaml
@@ -19,7 +19,7 @@ rules:
       - update
       - delete
   - apiGroups:
-      - ''
+      - rbac.authorization.k8s.io
     resources:
       - clusterrolebindings
     verbs:
