--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/02_CleanCertsJobName.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/02_CleanCertsJobName.yaml
@@ -15,7 +15,7 @@ spec:
             - |
               #!/bin/bash
 
-              kubectl -n "$NAMESPACE" delete --ignore-not-found=true clusterrolebindings.rbac.authorization.k8s.io stackgres-operator-init
+              #kubectl delete --ignore-not-found=true clusterrolebindings.rbac.authorization.k8s.io stackgres-operator-init
 
               kubectl -n "$NAMESPACE" delete --ignore-not-found=true certs --all
 
