--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_rolebinding.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_rolebinding.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   annotations:
     argocd.argoproj.io/hook: PreSync
@@ -8,8 +8,9 @@ metadata:
   name: stackgres-init-additional-permissions-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: stackgres-init-additional-permissions
 subjects:
   - kind: ServiceAccount
     name: stackgres-operator-init
+    namespace: syn-stackgres-operator
