--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_clusterRole.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_clusterRole.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   annotations:
     argocd.argoproj.io/hook: PreSync
@@ -8,22 +8,11 @@ metadata:
   name: stackgres-init-additional-permissions
 rules:
   - apiGroups:
-      - ''
+      - rbac.authorization.k8s.io
     resources:
-      - secrets
+      - clusterrolebindings
     verbs:
+      - delete
       - get
       - list
       - watch
-      - create
-      - update
-      - delete
-  - apiGroups:
-      - cert-manager.io
-    resources:
-      - certificates
-      - issuers
-    verbs:
-      - delete
-      - get
-      - list
