switching to different SA

--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_clusterRoleBinding.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_clusterRoleBinding.yaml
@@ -12,5 +12,5 @@ roleRef:
   name: stackgres-init-additional-permissions
 subjects:
   - kind: ServiceAccount
-    name: stackgres-operator-init
+    name: stackgres-init-additional-permissions
     namespace: syn-stackgres-operator
