--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_role.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_role.yaml
@@ -19,6 +19,20 @@ rules:
       - update
       - delete
   - apiGroups:
+      - apps
+    resources:
+      - deployments
+      - replicasets
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
       - cert-manager.io
     resources:
       - certificates
