--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-deployment.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     cert-config: |
       {"certManager":{"autoConfigure":true}}
+    version: 1.7.0
   labels:
     app: stackgres-operator
     group: stackgres.io
