--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/mutating-webhook-configuration.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/mutating-webhook-configuration.yaml
@@ -1,284 +1,3 @@
-apiVersion: admissionregistration.k8s.io/v1
-kind: MutatingWebhookConfiguration
 metadata:
   annotations:
-    meta.helm.sh/release-name: stackgres-operator
-    meta.helm.sh/release-namespace: syn-stackgres-operator
-  labels:
-    app.kubernetes.io/managed-by: Helm
-  name: stackgres-operator
-  namespace: syn-stackgres-operator
-webhooks:
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgcluster
-    failurePolicy: Fail
-    name: sgcluster.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgclusters
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgpgconfig
-    failurePolicy: Fail
-    name: sgpgconfig.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgpgconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgpoolconfig
-    failurePolicy: Fail
-    name: sgpoolconfig.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgpoolconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sginstanceprofile
-    failurePolicy: Fail
-    name: sginstanceprofile.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sginstanceprofiles
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgbackupconfig
-    failurePolicy: Fail
-    name: sgbackupconfig.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgbackupconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgbackup
-    failurePolicy: Fail
-    name: sgbackup.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgbackups
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgdistributedlogs
-    failurePolicy: Fail
-    name: sgdistributedlogs.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgdistributedlogs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgdbops
-    failurePolicy: Fail
-    name: sgdbops.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgdbops
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgobjectstorage
-    failurePolicy: Fail
-    name: sgobjectstorage.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgobjectstorages
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgscript
-    failurePolicy: Fail
-    name: sgscripts.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgscripts
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgshardedcluster
-    failurePolicy: Fail
-    name: sgshardedclusters.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgshardedclusters
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgshardedbackup
-    failurePolicy: Fail
-    name: sgshardedbackups.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgshardedbackups
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/mutation/sgshardeddbops
-    failurePolicy: Fail
-    name: sgshardeddbops.mutating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgshardeddbops
-    sideEffects: None
+    stackgres_version: 1.7.0
