--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/validating-webhook-configuration.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/validating-webhook-configuration.yaml
@@ -1,296 +1,3 @@
-apiVersion: admissionregistration.k8s.io/v1
-kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    meta.helm.sh/release-name: stackgres-operator
-    meta.helm.sh/release-namespace: syn-stackgres-operator
-  labels:
-    app.kubernetes.io/managed-by: Helm
-  name: stackgres-operator
-  namespace: syn-stackgres-operator
-webhooks:
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgcluster
-    failurePolicy: Fail
-    name: sgcluster.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-        resources:
-          - sgclusters
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgpgconfig
-    failurePolicy: Fail
-    name: sgpgconfig.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgpgconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgpoolconfig
-    failurePolicy: Fail
-    name: sgpoolconfig.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgpoolconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sginstanceprofile
-    failurePolicy: Fail
-    name: sginstanceprofile.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sginstanceprofiles
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgbackupconfig
-    failurePolicy: Fail
-    name: sgbackupconfig.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgbackupconfigs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgbackup
-    failurePolicy: Fail
-    name: sgbackup.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgbackups
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgdistributedlogs
-    failurePolicy: Fail
-    name: sgdistributedlogs.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgdistributedlogs
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgdbops
-    failurePolicy: Fail
-    name: sgdbops.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgdbops
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgobjectstorage
-    failurePolicy: Fail
-    name: sgobjectstorage.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgobjectstorages
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgscript
-    failurePolicy: Fail
-    name: sgscripts.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgscripts
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgshardedcluster
-    failurePolicy: Fail
-    name: sgshardedclusters.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgshardedclusters
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgshardedbackup
-    failurePolicy: Fail
-    name: sgshardedbackups.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgshardedbackups
-    sideEffects: None
-  - admissionReviewVersions:
-      - v1
-    clientConfig:
-      caBundle: Cg==
-      service:
-        name: stackgres-operator
-        namespace: syn-stackgres-operator
-        path: /stackgres/validation/sgshardeddbops
-    failurePolicy: Fail
-    name: sgshardeddbops.validating-webhook.stackgres.io
-    rules:
-      - apiGroups:
-          - stackgres.io
-        apiVersions:
-          - '*'
-        operations:
-          - CREATE
-          - UPDATE
-          - DELETE
-        resources:
-          - sgshardeddbops
-    sideEffects: None
+    stackgres_version: 1.7.0
