--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -33,3 +33,6 @@ parameters:
         - type: jsonnet
           filter: postprocess/fix_null_entries.jsonnet
           path: ${_instance}/01_helmchart/stackgres-operator/crds
+        - type: jsonnet
+          filter: postprocess/annotate_webhooks.jsonnet
+          path: ${_instance}/01_helmchart/stackgres-operator/templates
