--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/02_set_restAPI_password_job.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/02_set_restAPI_password_job.yaml
@@ -56,3 +56,4 @@ spec:
           volumeMounts: []
       restartPolicy: OnFailure
       serviceAccountName: stackgres-operator-init
+  ttlSecondsAfterFinished: 5
