--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -7,7 +7,7 @@ parameters:
     namespaceAnnotations: {}
 
     charts:
-      stackgres-operator:
+      stackgres_operator:
         source: "https://stackgres.io/downloads/stackgres-k8s/stackgres/helm/"
         version: "1.7.0"
     kubernetesVersion: "${dynamic_facts:kubernetesVersion:major}.${dynamic_facts:kubernetesVersion:minor}"
