--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -2,9 +2,9 @@ parameters:
   kapitan:
     dependencies:
       - type: helm
-        output_path: dependencies/stackgres-operator/helmcharts/stackgres-operator/${stackgres_operator:charts:stackgres-operator:version}
-        source: ${stackgres_operator:charts:stackgres-operator:source}
-        version: ${stackgres_operator:charts:stackgres-operator:version}
+        output_path: dependencies/stackgres-operator/helmcharts/stackgres-operator/${stackgres_operator:charts:stackgres_operator:version}
+        source: ${stackgres_operator:charts:stackgres_operator:source}
+        version: ${stackgres_operator:charts:stackgres_operator:version}
         chart_name: stackgres-operator
     compile:
       - input_paths:
@@ -20,7 +20,7 @@ parameters:
       - output_path: stackgres-operator/01_helmchart
         input_type: helm
         input_paths:
-          - dependencies/stackgres-operator/helmcharts/stackgres-operator/${stackgres_operator:charts:stackgres-operator:version}/
+          - dependencies/stackgres-operator/helmcharts/stackgres-operator/${stackgres_operator:charts:stackgres_operator:version}/
         helm_values: ${stackgres_operator:helmValues}
         helm_params:
           name: stackgres-operator
