--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/02_CleanCertsJobName.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/02_CleanCertsJobName.yaml
@@ -16,7 +16,7 @@ spec:
               #!/bin/bash
 
 
-              kubectl delete --ignore-not-found=true clusterrolebindings.rbac.authorization.k8s.io stackgres-operator-init
+              kubectl delete --ignore-not-found=true clusterrolebindings.rbac.authorization.k8s.io stackgres-operator-init stackgres-restapi-admin
               # deleting webhook because they use legacy certs
               kubectl delete mutatingwebhookconfigurations.admissionregistration.k8s.io stackgres-operator
 
